try to fix background on mobile browsers

--- a/app/globals.css
+++ b/app/globals.css
@@ -36,7 +36,13 @@ body {
 body {
   font-family: var(--font-family-primary);
   color: var(--color-accent);
-  background: url('../public/dot_grid_bg_noise.png') fixed var(--color-accent-10);
+  background-image: url('../public/dot_grid_bg_noise.png');
+  background-position: top left;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  transform: translate3d(0,0,0);
+-webkit-transform: translate3d(0,0,0);
 }
 
 a {
